[gd_scene load_steps=2 format=3 uid="uid://cfqem12udux7d"]

[ext_resource type="Script" uid="uid://0el2vv1outnr" path="res://Assets/UI/Menus/Inventory/itemInstance.gd" id="1_baoyg"]

[node name="ItemInstance" type="HBoxContainer"]
script = ExtResource("1_baoyg")

[node name="UseButton" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Use"

[node name="ItemLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 10

[connection signal="pressed" from="UseButton" to="." method="_on_use_button_pressed"]
